Membuat website sederhana dengan grid part2 tgl 3 Agustus 2024

--- a/LATIHAN2/Latihan 8. Membuat Website Responsive menggunakan grid/index.html
+++ b/LATIHAN2/Latihan 8. Membuat Website Responsive menggunakan grid/index.html
@@ -13,15 +13,29 @@
             <h2 class="heading">Ahmad Merchandise</h2>
             <p class="sub-heading">Casual Shoes</p>
         </div>
-        <div class="features features-1">
+        <div class="features feature-1">
             <h4 class="price">IDR 250K</h4>
             <p class="item">Black</p>
         </div>
-        <div class="features features-2">
+        <div class="features feature-2">
             <h4 class="price">IDR 250K</h4>
             <p class="item">Red</p>
         </div>
       </header>
+
+      <!-- Awal Nav -->
+       <nav class="menu">
+        <div class="brand">
+          <h1>Ahmad Merch</h1>
+        </div>
+        <ul class="menu-list">
+          <li><a href="">Home</a></li>
+          <li><a href="">Product</a></li>
+          <li><a href="">About</a></li>
+          <li><a href="">Gallery</a></li>
+        </ul>
+       </nav>
+      <!-- Akhir Nav -->
     </div>
   </body>
 </html>
