Membuat website sederhana part3 tgl 4 Agustus 2024

--- a/LATIHAN2/Latihan 8. Membuat Website Responsive menggunakan grid/index.html
+++ b/LATIHAN2/Latihan 8. Membuat Website Responsive menggunakan grid/index.html
@@ -10,21 +10,30 @@
     <div class="container">
       <header class="header">
         <div class="hero">
-            <h2 class="heading">Ahmad Merchandise</h2>
-            <p class="sub-heading">Casual Shoes</p>
+          <h2 class="heading">Ahmad Merchandise</h2>
+          <p class="sub-heading">Casual Shoes</p>
         </div>
         <div class="features feature-1">
-            <h4 class="price">IDR 250K</h4>
-            <p class="item">Black</p>
+          <h4 class="price">IDR 250K</h4>
+          <p class="item">Black</p>
         </div>
         <div class="features feature-2">
-            <h4 class="price">IDR 250K</h4>
-            <p class="item">Red</p>
+          <h4 class="price">IDR 250K</h4>
+          <p class="item">Red</p>
         </div>
       </header>
 
       <!-- Awal Nav -->
-       <nav class="menu">
+      <nav class="menu">
+        <!-- Hamburger menu dari copy paste kode latihan flexbox -->
+        <div class="menu-toggle">
+          <input type="checkbox" />
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+        <!-- Akhir mrnu hamburger -->
+
         <div class="brand">
           <h1>Ahmad Merch</h1>
         </div>
@@ -34,8 +43,56 @@
           <li><a href="">About</a></li>
           <li><a href="">Gallery</a></li>
         </ul>
-       </nav>
+      </nav>
       <!-- Akhir Nav -->
+
+      <!-- Awal services -->
+      <section class="services">
+        <div class="service">
+          <div class="icon">💻</div>
+          <h3>Tutorial</h3>
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+            Reiciendis, minima autem quod quasi ratione quos!
+          </p>
+        </div>
+
+        <div class="service">
+          <div class="icon">🎓</div>
+          <h3>Online Course</h3>
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+            Reiciendis, minima autem quod quasi ratione quos!
+          </p>
+        </div>
+
+        <div class="service">
+          <div class="icon">🎙️</div>
+          <h3>Podcast</h3>
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+            Reiciendis, minima autem quod quasi ratione quos!
+          </p>
+        </div>
+
+        <div class="service">
+          <div class="icon">👕</div>
+          <h3>Merch</h3>
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+            Reiciendis, minima autem quod quasi ratione quos!
+          </p>
+        </div>
+      </section>
+      <!-- Akhir services -->
+
+      <!-- Awal gallery -->
+      <section id="gallery" class="gallery">
+        <h2>Gallery</h2>
+      </section>
+      <!-- Akhir gallery -->
     </div>
+
+    <script src="script.js"></script>
   </body>
 </html>
